# Flow3R

./: .gitignore  404.html  AGENTS.md  Agents.md  CHANGELOG.md  CONTRIBUTING.md  README.md  build_application.bat  build_executable.bat  compile_ui.bat  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
aaaflow3r/: compile_ui.bat
aaaflow3r/app/: compile_ui.bat  controller.py  main.py  record_video_test.py  session_state.py  test2.py  widget_controller.py  widget_service.py
api-reference/: index.html
app/: controller.py  flow_layout.py  placeholder_context.py  placeholder_formatter.py  recording_state.py  thread_bound_callable.py
architecture/: index.html
docs/: index.md
flow3r/app/: main.py  (+2 more)
plugin-dev/: index.html
search/: search_index.json
src/: main.py
ui/: AnalysisConfigurationDialog.ui  CameraConfigurationDialog.ui  CameraEditDialog.ui  CameraGroupEditDialog.ui  CameraGroupListDialog.ui  CameraListDialog.ui  CameraPreviewDialog.ui  CameraWidget.ui  DConfigureCamera.ui  GGrimaceResults.ui  HeatmapWidget.ui  MainWindow.ui  PathEditorDialog.ui  PipelineConfigurationDialog.ui  PipelineEditDialog.ui  PipelineListDialog.ui  PoseEstimationConfigurationDialog.ui  RecordingConfigurationDialog.ui  RecordingControlsWidget.ui  TextEditorDialog.ui  VariableEditDialog.ui  VariableListDialog.ui  VariablePreparationDialog.ui  VariableTextWidget.ui  VideoFileConfigurationDialog.ui  WRecorder.ui  WelfareAnalysisWidget.ui  WelfareRecorder.ui  WelfareRecorderLayoutDemo.ui
user-guide/: index.html
(+557 files in other folders)
