[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow3r"
version = "0.2.0"
authors = [
  { name="Marcel Schmutz", email="mschmut@ethz.ch" },
]
description = "Multi-source video/data recording application for scientific and animal welfare research"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    # ── Internal ETH3RHub packages (replace with real git refs) ──────────────
    "py3r_media @ git+https://github.com/ETHZ-INS/Py3R-Media.git@v0.5.0",

    # ── Qt UI ────────────────────────────────────────────────────────────────
    "PySide6 >= 6.6",

    # ── Video / audio I/O ────────────────────────────────────────────────────
    "av >= 12.0",                   # PyAV
    "opencv-python >= 4.8",
    "cv2_enumerate_cameras >= 0.1.7",
    "sounddevice >= 0.4",
    "soundfile >= 0.12",
    "pypylon >= 1.9",

    # ── Scientific / numerics ────────────────────────────────────────────────
    "numpy >= 1.26",
    "pyqtgraph >= 0.13",

    # ── Reactive streams ─────────────────────────────────────────────────────
    "reactivex >= 4.0",

    # ── Serialisation ────────────────────────────────────────────────────────
    "pyyaml >= 6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flow3r*"]

[tool.setuptools.package-data]
flow3r = [
  "app/res/*.png",
  "app/res/*.ico",
  "app/res/*.qss",
]
